
VERSION 0.6.2-cvs
=================

2005-01-03  Vincent Richard  <vincent@vincent-richard.net>

 * Fixed linking error on 'typeAdapter <string>::parse()' with g++ versions
   older than 3.3.

2005-01-02  Vincent Richard  <vincent@vincent-richard.net>

 * Added unit tests for utility::path and bodyPart.

 * Added 'utility::datetimeUtils' to provide some time-related functions.

 * Fixed 'stringUtils' not in namespace 'utility'.

 * Moved 'datetime::getDayOfWeek()' to 'datetimeUtils'.

2005-01-01  Vincent Richard  <vincent@vincent-richard.net>

 * Converted all C-style casts to C++-style casts.

 * Added unit tests for utility::md5, utility::stringProxy and
   utility::stringUtils.

2004-12-31  Vincent Richard  <vincent@vincent-richard.net>

 * Started version 0.6.2.


VERSION 0.6.1
=============

2004-12-27  Vincent Richard  <vincent@vincent-richard.net>

 * Added support for 'libtool'. All files needed for autoconf/automake
   can be generated with SConstruct script, using the 'autotools'
   target ("scons autotools"). These are also built and included
   automatically in the distribution tarball ("scons dist").

2004-12-26  Vincent Richard  <vincent@vincent-richard.net>

 * Removed relative paths from #include's and moved all header files
   to 'vmime/' directory.

 * Renamed main VMime include from 'vmime' to 'vmime.hpp'. So, in your
   program, you have to #include <vmime/vmime.hpp>.

 * Added support for 'pkg-config'.

 * Allow creating a service from an URL (session::getStore("url") and
   session::getTransport("url"))

2004-12-24  Vincent Richard  <vincent@vincent-richard.net>

 * Renamed class 'disposition' to 'contentDisposition' and the enum
   namespace 'dispositionTypes' to 'contentDispositionTypes'.

2004-12-23  Vincent Richard  <vincent@vincent-richard.net>

 * maildir: when connecting to the store, create root directory on the
   file system if it does not exist.

2004-12-22  Vincent Richard  <vincent@vincent-richard.net>
